hover and translate

--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -72,7 +72,9 @@
                 <button class="btn btn-light m-2" id="add">Add Topic</button>
                 <a href="{{url_for('restart')}}" class="btn btn-light m-2" id="restart">Restart</a>
                 <a href="{{url_for('finish')}}" class="btn btn-light m-2" id="finish">Finish</a>
-
+                <h4 id="translation" class="navbar-text text-white ml-4">
+                    Translation:
+                </h4>
             </div>
 
         </nav>
