--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -1,30 +1,14 @@
-<!--  Code adapted from Jeff Lund's Ankura code
- https://github.com/jefflund/ankura  -->
 
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>MTAnchor</title>
-        <link href="{{ url_for('static', filename='images/favicon.ico') }}" rel='shortcut icon' type='image/x-icon'>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% extends "base.html" %}
+    {% block content %}
+        <h2 class="text-center mb-4">MTAnchor</h2>
 
-        <!-- jQuery/Bootstrap CSS -->
-        <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
+        <div class="d-flex justify-content-center" class="load">
+            <i class="fa fa-spinner fa-5x align-self-center load"></i>
+            <h3 class="load"> Loading... </h3>
+        </div>
 
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-
-
-
-
-    </head>
-    <body>
         <div class="container" id="topics">
-            <h2 class="text-center mb-4">MTAnchor</h2>
             <div class="row mb-4">
                 <div class="col-6">
                     <h4 class="text-left">Language 1</h4>
@@ -66,6 +50,7 @@
             <!-- <input id="search" class="form-control form-control-sm" type="text" placeholder="Search words"> -->
         </div>
 
+
         <nav class="navbar fixed-bottom navbar-dark bg-dark">
             <div class="container">
                 <div class="col-4 d-inline-block">
@@ -91,13 +76,4 @@
         </nav>
 
 
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-        <script type="text/javascript" src="{{ url_for('static', filename='js/script.js') }}"></script>
-
-        
-
-  </body>
-</html>
+    {% endblock %}
