--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -8,6 +8,9 @@
             <h3 class="load"> Loading... </h3>
         </div>
 
+        <div id="enough-anchors" title="No topic update" class="d-none">
+        </div>
+
         <div class="container" id="topics">
             <div class="row mb-4">
                 <div class="col-6">
@@ -47,7 +50,7 @@
             </div>
             {% endfor %}
 
-            <!-- <input id="search" class="form-control form-control-sm" type="text" placeholder="Search words"> -->
+
         </div>
 
 
@@ -74,6 +77,7 @@
             </div>
 
         </nav>
+
 
 
     {% endblock %}
