--- a/interface/templates/index.html
+++ b/interface/templates/index.html
@@ -16,14 +16,14 @@
             <div class="row mb-4">
                 <div class="col-6">
                     <h4 class="text-left">Language 1</h4>
-                    <h6 class="text-left">Intralingual score: {{scores.intra1}}</h6>
-                    <h6 class="text-left">Crosslingual score: {{scores.cross1}}</h6>
+                    <h6 class="text-left">Intralingual score: {{scores.intra1}}%</h6>
+                    <h6 class="text-left">Crosslingual score: {{scores.cross1}}%</h6>
 
                 </div>
                 <div class="col-6">
                     <h4 class="text-right">Language 2</h4>
-                    <h6 class="text-right">Intralingual score: {{scores.intra2}}</h6>
-                    <h6 class="text-right">Crosslingual score: {{scores.cross2}}</h6>
+                    <h6 class="text-right">Intralingual score: {{scores.intra2}}%</h6>
+                    <h6 class="text-right">Crosslingual score: {{scores.cross2}}%</h6>
 
                 </div>
             </div>
